# persistency

./: .bazelrc  Cargo.toml  MODULE.bazel  REPO.bazel  conf.py  versions.json
examples/: .bazelrc  MODULE.bazel  README.md
examples/src/: BUILD  main.cpp
main/: genindex.html  index.html  needs.json  objects.inv  schema_violations.json  score_repo_grouped_scl_cache.json  score_scl_grouped_cache.json  score_testcaseneeds_cache.json  score_xml_parser_cache.json  search.html  searchindex.js
main/_sources/: index.rst.txt
main/_sources/docs/features/persistency/: index.rst.txt
main/_sources/docs/features/persistency/architecture/: chklst_arc_inspection.rst.txt  index.rst.txt
main/_sources/docs/features/persistency/safety_analysis/: dfa.rst.txt  fmea.rst.txt
main/_sources/docs/features/persistency/safety_planning/: index.rst.txt
main/_sources/docs/features/persistency/security_analysis/: stride.rst.txt
main/_sources/docs/manuals/: index.rst.txt  safety_manual.rst.txt  security_manual.rst.txt
main/_sources/docs/release/: release_note.rst.txt
main/_sources/docs/safety_mgt/: feature_safety_analysis_fdr.rst.txt  index.rst.txt  module_codeowners.rst.txt  module_safety_analysis_fdr.rst.txt  module_safety_package_fdr.rst.txt  module_safety_plan.rst.txt  module_safety_plan_fdr.rst.txt
main/_sources/docs/security_mgt/: index.rst.txt  module_security_package_fdr.rst.txt  module_security_plan.rst.txt  module_security_plan_fdr.rst.txt
main/_sources/docs/verification_report/: module_verification_report.rst.txt
main/_sources/persistency/docs/: index.rst.txt
main/_sources/persistency/docs/safety_mgt/: index.rst.txt  module_codeowners.rst.txt  module_safety_plan.rst.txt
main/_sources/persistency/docs/security_mgt/: module_security_package_fdr.rst.txt  module_security_plan.rst.txt  module_security_plan_fdr.rst.txt
main/_sources/persistency/docs/verification/: module_verification_report.rst.txt
main/_sources/persistency/json/: component_classification.rst.txt
main/_sources/persistency/json/docs/: index.rst.txt
main/_sources/persistency/kvs/: index.rst.txt
main/_sources/persistency/kvs/architecture/: index.rst.txt
main/_sources/persistency/kvs/docs/: index.rst.txt
main/_sources/persistency/kvs/requirements/: index.rst.txt  statistics.rst.txt
main/_sources/persistency/kvs/safety_analysis/: fmea.rst.txt
main/_sources/persistency/manual/: safety_manual.rst.txt
main/_sources/persistency/release/: release_note.rst.txt
main/_sources/persistency/safety_mgt/: module_safety_package_fdr.rst.txt  module_safety_plan.rst.txt  module_safety_plan_fdr.rst.txt
main/_sources/persistency/security_mgt/: module_security_plan.rst.txt
main/_sources/score/json/docs/: component_classification.rst.txt  index.rst.txt
main/_sources/score/kvs/: index.rst.txt  kvs.rst.txt
main/_sources/score/kvs/docs/architecture/: index.rst.txt  (+2 more)
main/_static/css/: score_needs.css
main/docs/features/persistency/: index.html
main/docs/features/persistency/architecture/: chklst_arc_inspection.html  index.html
main/docs/features/persistency/safety_analysis/: dfa.html  fmea.html
main/docs/features/persistency/safety_planning/: index.html
main/docs/features/persistency/security_analysis/: stride.html
main/docs/features/persistency/security_planning/: index.html
main/docs/manuals/: index.html  safety_manual.html  security_manual.html
main/docs/release/: release_note.html
main/docs/safety_mgt/: feature_safety_analysis_fdr.html  index.html  module_codeowners.html  module_safety_analysis_fdr.html  module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
main/docs/security_mgt/: index.html  module_security_package_fdr.html  module_security_plan.html  module_security_plan_fdr.html
main/docs/verification_report/: module_verification_report.html
main/persistency/: index.html
main/persistency/docs/: index.html
main/persistency/docs/manual/: index.html  safety_manual.html
main/persistency/docs/release/: release_note.html
main/persistency/docs/safety_mgt/: index.html  module_codeowners.html  module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
main/persistency/docs/security_mgt/: index.html  module_security_package_fdr.html  module_security_plan.html  module_security_plan_fdr.html
main/persistency/docs/verification/: module_verification_report.html
main/persistency/json/: component_classification.html  index.html
main/persistency/json/docs/: component_classification.html  index.html
main/persistency/kvs/: index.html  kvs.html
main/persistency/kvs/architecture/: index.html
main/persistency/kvs/docs/: index.html
main/persistency/kvs/docs/architecture/: index.html
main/persistency/kvs/docs/requirements/: index.html
main/persistency/kvs/docs/safety_analysis/: dfa.html  fmea.html
main/persistency/kvs/requirements/: index.html  statistics.html
main/persistency/kvs/safety_analysis/: dfa.html  fmea.html
main/persistency/manual/: index.html  safety_manual.html
main/persistency/release/: release_note.html
main/persistency/safety_mgt/: index.html  module_codeowners.html  module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
main/persistency/security_mgt/: index.html  module_security_package_fdr.html  module_security_plan.html  module_security_plan_fdr.html
main/persistency/verification/: module_verification_report.html
main/score/json/docs/: component_classification.html  index.html
main/score/kvs/: index.html  kvs.html
main/score/kvs/docs/architecture/: chklst_arc_inspection.html  component_architecture.html  index.html
main/score/kvs/docs/detailed_design/: chklst_impl_inspection.html  index.html
main/score/kvs/docs/requirements/: chklst_req_inspection.html  index.html  statistics.html
main/score/kvs/docs/safety_analysis/: aou_requirements.html  dfa.html  fmea.html
pr-1/: index.html  needs.json  search.html  searchindex.js
pr-1/_sources/: index.rst.txt
src/rust/rust_kvs/: BUILD
src/rust/rust_kvs/src/: kvs_value.rs
src/rust/rust_kvs_tool/: BUILD
(+11 files in other folders)
