[workspace]
resolver = "2"
members = [
    "src/rust/rust_kvs",
    "src/rust/rust_kvs_tool",
    "tests/test_scenarios/rust",
]


[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
rust_kvs = { path = "src/rust/rust_kvs" }
rust_kvs_tool = { path = "src/rust/rust_kvs_tool" }
score_log = { git = "https://github.com/eclipse-score/baselibs.git", rev = "2603afd58043810118b21ce7fca37a33894e5aef", features = [
    "qm",
] }
stdout_logger = { git = "https://github.com/eclipse-score/baselibs.git", rev = "2603afd58043810118b21ce7fca37a33894e5aef" }

adler32 = "1.2.0"
tinyjson = "2.5.1"
pico-args = "0.5"


[workspace.lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
