# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_persistency",
    version = "0.1.0",
    compatibility_level = 0,
)

## Toolchains (dependencies and config)
# python
bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    hub_name = "pip_score_venv_test",
    python_version = PYTHON_VERSION,
    requirements_lock = "//tests/python_test_cases:requirements.txt",
)
use_repo(pip, "pip_score_venv_test")

# rust
bazel_dep(name = "rules_rust", version = "0.67.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.90.0"],
)

# ToDo: Official release needed, documentaion on usage of rust toolchains missing
bazel_dep(name = "rust_qnx8_toolchain", version = "1.2.0", dev_dependency = True)
archive_override(
    module_name = "rust_qnx8_toolchain",
    strip_prefix = "qnx8",
    urls = [
        "https://github.com/qorix-group/rust-lang-qnx8/releases/download/1.2.0/qnx8_rust_toolchain.tar.gz",
    ],
)

# LLVM Toolchains Rules - host configuration
bazel_dep(name = "rules_cc", version = "0.1.1")

bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    cxx_standard = {"": "c++17"},
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

## Bazel registry
# Module dependencies
bazel_dep(name = "googletest", version = "1.15.0")
bazel_dep(name = "google_benchmark", version = "1.9.4")

## S-CORE bazel registry
# Checker rule for CopyRight checks/fixs
bazel_dep(name = "score_cr_checker", version = "0.3.1")

# Starlark language server
bazel_dep(name = "score_starpls_lsp", version = "0.1.0")

#Dash license checker
bazel_dep(name = "score_dash_license_checker", version = "0.1.2")

# Format checker
bazel_dep(name = "score_format_checker", version = "0.1.1")
bazel_dep(name = "aspect_rules_lint", version = "1.4.4")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

# docs-as-code
bazel_dep(name = "score_docs_as_code", version = "1.0.1")

# Provides, pytest & venv
bazel_dep(name = "score_python_basics", version = "0.3.4")
bazel_dep(name = "score_platform", version = "0.3.0")
bazel_dep(name = "score_process", version = "1.1.0")

# cli helper
bazel_dep(name = "score_cli_helper", version = "0.1.2")

# Module deps
bazel_dep(name = "score-baselibs", version = "0.0.0")

## additional settings / config
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "score_persistency_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//src/rust/rust_kvs:Cargo.toml",
        "//src/rust/rust_kvs_tool:Cargo.toml",
        "//tests/rust_test_scenarios:Cargo.toml",
    ],
)
use_repo(crate, "score_persistency_crates")

## temporary overrides / tools
# Testing utils dependency.
# Direct usage of tag in git_override reports false problem in editor, using hash of a tag
bazel_dep(name = "testing-utils")
git_override(
    module_name = "testing-utils",
    commit = "a847c7464cfa47e000141631d1223b92560d2e58",  # tag v0.2.0
    remote = "https://github.com/qorix-group/testing_tools.git",
)

git_override(
    module_name = "score_docs_as_code",
    commit = "13ba715a95cfe85158b60d7f4748ba8e28895d8c",
    remote = "https://github.com/eclipse-score/docs-as-code.git",
)

#bazel_dep on module 'rules_boost' has no version -> override needed
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
)

git_override(
    module_name = "score-baselibs",
    commit = "46923f5c4f302bd9feae0261588687aaf32e3c5c",
    remote = "https://github.com/eclipse-score/baselibs.git",
)

bazel_dep(name = "score_toolchains_rust", version = "0.1", dev_dependency = True)
git_override(
    module_name = "score_toolchains_rust",
    commit = "5614e4b273f2f5302d47a05d7e58dae86f97a3c3",
    remote = "https://github.com/eclipse-score/toolchains_rust.git",
)

bazel_dep(name = "score_toolchains_qnx", version = "0.1", dev_dependency = True)
git_override(
    module_name = "score_toolchains_qnx",
    commit = "cdaa451c994f5e1f88aa6395dd516586f387d0ec",
    remote = "https://github.com/eclipse-score/toolchains_qnx.git",
)

toolchains_qnx = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchains_qnx", dev_dependency = True)
toolchains_qnx.sdp(
    sha256 = "f2e0cb21c6baddbcb65f6a70610ce498e7685de8ea2e0f1648f01b327f6bac63",
    strip_prefix = "installation",
    url = "https://www.qnx.com/download/download/79858/installation.tgz",
)
use_repo(toolchains_qnx, "toolchains_qnx_sdp")
use_repo(toolchains_qnx, "toolchains_qnx_qcc")
use_repo(toolchains_qnx, "toolchains_qnx_ifs")

bazel_dep(name = "custom_qemu", version = "1.0.0", dev_dependency = True)
archive_override(
    module_name = "custom_qemu",
    integrity = "sha256-3V2d+p7nP0tsbrVWOPYUSJogLNal43CIAHEto6Vjdfg=",
    strip_prefix = "third_party",  # matches top-level dir in the tar
    urls = [
        "https://github.com/qorix-group/custom-qemu/releases/download/1.0.0/custom_qemu.tar.gz",
    ],
)

bazel_dep(name = "platforms", version = "0.0.11", dev_dependency = True)

# Registers the custom Rust toolchain wired to @qnx_rust
register_toolchains(
    "@toolchains_qnx_qcc//:qcc_aarch64",
    "@score_toolchains_rust//toolchains/aarch64-unknown-qnx8_0:toolchain_aarch64_qnx8_0",
    dev_dependency = True,
)

register_toolchains(
    "@toolchains_qnx_ifs//:ifs_x86_64",
    "@toolchains_qnx_ifs//:ifs_aarch64",
    dev_dependency = True,
)
