# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_persistency",
    version = "0.0.0",
)

## Toolchains (dependencies and config)
# python
bazel_dep(name = "rules_python", version = "1.8.3")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    hub_name = "pip_score_venv_test",
    python_version = PYTHON_VERSION,
    requirements_lock = "//tests/test_cases:requirements.txt.lock",
)
use_repo(pip, "pip_score_venv_test")

# rust
bazel_dep(name = "rules_rust", version = "0.68.2-score")

# bazel cc rules
bazel_dep(name = "rules_cc", version = "0.2.17")

# Toolchains and extensions
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.4", dev_dependency = True)
bazel_dep(name = "score_toolchains_rust", version = "0.9.1", dev_dependency = True)

## Bazel registry
# Module dependencies
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)

bazel_dep(name = "platforms", version = "1.0.0")

## S-CORE bazel registry
bazel_dep(name = "score_baselibs", version = "0.2.8")
git_override(
    module_name = "score_baselibs",
    commit = "2603afd58043810118b21ce7fca37a33894e5aef",
    remote = "https://github.com/eclipse-score/baselibs.git",
)

bazel_dep(name = "score_bazel_platforms", version = "0.1.2")

bazel_dep(name = "score_rules_imagefs", version = "0.0.3", dev_dependency = True)

bazel_dep(name = "score_docs_as_code", version = "4.6.0")

bazel_dep(name = "score_platform", version = "0.6.0", dev_dependency = True)
bazel_dep(name = "score_process", version = "1.6.0", dev_dependency = True)

bazel_dep(name = "score_python_basics", version = "0.3.4")
bazel_dep(name = "score_tooling", version = "1.2.0")
bazel_dep(name = "score_logging", version = "0.2.1")
git_override(
    module_name = "score_logging",
    commit = "8132182832efa25ea041d2cb10526d11fabe5cb6",
    remote = "https://github.com/eclipse-score/logging.git",
)

# grpc-java 1.69.0 is the first BCR release in this dependency line that
# explicitly supports Bazel 8 and avoids the broken legacy grpc extension import.
single_version_override(
    module_name = "grpc-java",
    version = "1.69.0",
)

# TODO: remove once inherited properly from `score_logging`.
bazel_dep(name = "trlc", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "trlc",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")

## temporary overrides / tools
# Testing utils dependency.
# Direct usage of tag in git_override reports false problem in editor, using hash of a tag
bazel_dep(name = "score_test_scenarios", version = "0.4.1")

bazel_dep(name = "custom_qemu", version = "1.0.0", dev_dependency = True)
archive_override(
    module_name = "custom_qemu",
    integrity = "sha256-3V2d+p7nP0tsbrVWOPYUSJogLNal43CIAHEto6Vjdfg=",
    strip_prefix = "third_party",  # matches top-level dir in the tar
    urls = [
        "https://github.com/qorix-group/custom-qemu/releases/download/1.0.0/custom_qemu.tar.gz",
    ],
)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)

imagefs = use_extension("@score_rules_imagefs//extensions:imagefs.bzl", "imagefs", dev_dependency = True)
imagefs.toolchain(
    name = "score_qnx_aarch64_ifs_toolchain",
    sdp_to_import = "@score_qcc_aarch64_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    type = "ifs",
)
imagefs.toolchain(
    name = "score_qnx_x86_64_ifs_toolchain",
    sdp_to_import = "@score_qcc_x86_64_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    type = "ifs",
)

gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_aarch64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)

use_repo(
    imagefs,
    "score_qnx_aarch64_ifs_toolchain",
    "score_qnx_x86_64_ifs_toolchain",
)

use_repo(
    gcc,
    "score_gcc_aarch64_toolchain",
    "score_gcc_x86_64_toolchain",
    "score_qcc_aarch64_toolchain",
    "score_qcc_aarch64_toolchain_pkg",
    "score_qcc_x86_64_toolchain",
    "score_qcc_x86_64_toolchain_pkg",
)

# S-CORE crates
bazel_dep(name = "score_crates", version = "0.0.10")
