# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

# The root `docs()` target globs documentation sources from the repository root
# (`source_dir = "."`). Unlike `.bazelignore` (which only affects target-pattern
# expansion such as `//...`), `ignore_directories()` also suppresses `glob()`
# traversal. Without this, the `**/*` globs follow the `bazel-*` convenience
# symlinks into the output base / execroot and enumerate the entire external
# dependency tree, configuring millions of targets and making every Bazel
# command extremely slow.
ignore_directories([
    "bazel-*",
    "_build",
    "target",
    ".venv*",
])
