# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_per_example",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "score_bazel_platforms", version = "0.1.1")
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.3.0")

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_x86_64",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_aarch64",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_x86_64",
    "score_qcc_aarch64",
    "score_qcc_x86_64",
)

bazel_dep(name = "score_persistency", version = "0.3.0")

# only in the intern examle to test the latest local version instead of the latest released one
local_path_override(
    module_name = "score_persistency",
    path = "../",
)

# inherited deps
bazel_dep(name = "score_baselibs", version = "0.2.4")
